# SpectrumKNX

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  DESIGN_IMPORT_EXPORT.md  DESIGN_STATE_CACHING.md  DEVELOPMENT.md  Dockerfile  PACKAGING.md  README.md  docker-compose.dev-store.yml  docker-compose.override.yml  docker-compose.yml  patch.py  ruff.toml
.github/: dependabot.yml
.github/workflows/: addon.yml  ci.yml  release.yml
assets/: demo_script.md
backend/: Dockerfile  api.py  benchmark_is_in_delta.py  cyclic_send.py  database.py  ha_live_bridge.py  knx_daemon.py  main.py  models.py  parsers.py  pyproject.toml  requirements.txt  security.py  seed_data.py  telegram_export.py  telegram_import.py  update_check.py  ws_manager.py
backend/tests/: test_api.py  test_api_import_export.py  test_api_knx_control.py  test_cyclic_send.py  test_ha_live_bridge.py  test_knx_daemon.py  test_parsers.py  test_reloader.py  test_security.py  test_telegram_export.py  test_telegram_import.py  test_update_check.py  test_ws_manager.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
ha-addon/: CHANGELOG.md  Dockerfile  config.yaml
ha-addon-companion/: CHANGELOG.md  config.yaml
kubernetes/: README.md  timescaledb-sts.yaml
packaging/debian/: build.sh  control.in  postinst  postrm  prerm  spectrum-knx.env  spectrum-knx.service
packaging/windows/: README.txt  env.template  launcher.py  spectrum-knx.spec
(+83 files in other folders)
